CIS-154 SonarQube Fixes